...
         target:self
         action:@selector(sortTasksByNameAction)];
        _sortTasksByNameBarButtonItem.accessibilityIdentifier = @"sort-tasks-bar-button-item";
        
        UIButton *button = [UIButton new];
        [button setTitleColor:UIColor.redColor forState:UIControlStateNormal];
        [button setTitle:NSLocalizedString(@"Logout", @"Tasks view 'Logout' button title") forState:UIControlStateNormal];
        [button addTarget:self
                   action:@selector(logoutAction)
         forControlEvents:UIControlEventTouchUpInside];
        _logoutBarButtonItem = [[UIBarButtonItem alloc] initWithCustomView:button];
        
        if (UIUserInterfaceIdiomPhone == self.traitCollection.userInterfaceIdiom) {
...
